# libtorch-titanet

./: CMakeLists.txt  CmakeLists.txt  README.md  audio_filenames.txt  audio_filepaths.txt  flac_files_paths.txt  main.cpp  notebook.ipynb
include/: SqueezeExcitation.h  dataset.h  net.h  prologue.h  read_audio.h  spectrogram.h  subblock.h
src/: SqueezeExcitation.cpp  dataset.cpp  net.cpp  prologue.cpp  read_audio.cpp  spectrogram.cpp  subblock.cpp
